[package]
name = "gnats"
version = "2026.7.0"
edition = "2021"
description = "gnats - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "gnats"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", branch = "main", default-features = false, features = ["scenes", "screensaver-runtime", "role-application", "lifecycle-foreground", "platform-native"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-gnats"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (gnats) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/gnats", "usr/libexec/screensaver-shims/gnats", "755"],
    ["assets/scene-gnats.desktop", "usr/share/applications/scene-gnats.desktop", "644"],
    ["assets/scene-gnats.xml", "usr/share/xscreensaver/config/scene-gnats.xml", "644"]
]

[package.metadata.generate-rpm]
name = "scene-gnats"
version = "2026.7.0"
release = "1"
arch = "x86_64"
summary = "gnats - retro terminal screensaver effect"
description = "Screensaver effect (gnats) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/gnats", dest = "/usr/libexec/screensaver-shims/gnats", mode = "755" },
    { source = "assets/scene-gnats.desktop", dest = "/usr/share/applications/scene-gnats.desktop", mode = "644" },
    { source = "assets/scene-gnats.xml", dest = "/usr/share/xscreensaver/config/scene-gnats.xml", mode = "644" }
]