[package]
license = "MIT"
name = "gnats"
version = "2026.6.10-1"
edition = "2021"
description = "gnats - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "gnats"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media",
] }

[build-dependencies]
embed-resource = "2"
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

[package.metadata.deb]
name = "screensaver-gnats"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (gnats) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/gnats", "usr/libexec/local76/screensavers/gnats", "755"],
    ["assets/local76-gnats.desktop", "usr/share/applications/local76-gnats.desktop", "644"],
    ["assets/local76-gnats.xml", "usr/share/xscreensaver/config/local76-gnats.xml", "644"],
    ["assets/local76-gnats.png", "usr/share/pixmaps/local76-gnats.png", "644"]
]

[package.metadata.generate-rpm]
name = "screensaver-gnats"
version = "2026.6.10.1"
release = "1"
arch = "x86_64"
summary = "gnats - retro terminal screensaver effect"
description = "Screensaver effect (gnats) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/gnats", dest = "/usr/libexec/local76/screensavers/gnats", mode = "755" },
    { source = "assets/local76-gnats.desktop", dest = "/usr/share/applications/local76-gnats.desktop", mode = "644" },
    { source = "assets/local76-gnats.xml", dest = "/usr/share/xscreensaver/config/local76-gnats.xml", mode = "644" },
    { source = "assets/local76-gnats.png", dest = "/usr/share/pixmaps/local76-gnats.png", mode = "644" }
]
